--- a/config.json.example
+++ b/config.json.example
@@ -2,4 +2,7 @@
     "command": "dipy_mask:dwi",
     "lb": 5,
     "dwi": "testdata/brad1/data.nii.gz",
+    "lb": 0.2,
+    "ub": "Inf",
+    "img": "testdata/brad1/data.nii.gz"
 }
